Version 0.54.0
--------------

In development

NOTES:

* Minimum python version raised to 3.7.

Version 0.53.1 (25 March, 2021)
-------------------------------

This is a bugfix release for 0.53.0. It contains the following four
pull-requests which fix two critical regressions and two build failures
reported by the openSuSe team:

* PR #6826 Fix regression on gufunc serialization
* PR #6828 Fix regression in CUDA: Set stream in mapped and managed array
  device_setup
* PR #6837 Ignore warnings from packaging module when testing import behaviour.
* PR #6851 set non-reported llvm timing values to 0.0

Authors:

* Ben Greiner
* Graham Markall
* Siu Kwan Lam
* Stuart Archibald

Version 0.53.0 (11 March, 2021)
-------------------------------

This release continues to add new features, bug fixes and stability improvements
to Numba.

Highlights of core changes:

* Support for Python 3.9 (Stuart Archibald).
* Function sub-typing (Lucio Fernandez-Arjona).
* Initial support for dynamic ``gufuncs`` (i.e. from ``@guvectorize``)
  (Guilherme Leobas).
* Parallel Accelerator (``@njit(parallel=True)`` now supports Fortran ordered
  arrays (Todd A. Anderson and Siu Kwan Lam).

Intel also kindly sponsored research and development that lead to two new
features:

  * Exposing LLVM compilation pass timings for diagnostic purposes (Siu Kwan
    Lam).
  * An event system for broadcasting compiler events (Siu Kwan Lam).

Highlights of changes for the CUDA target:

* CUDA 11.2 onwards (versions of the toolkit using NVVM IR 1.6 / LLVM IR 7.0.1)
  are now supported (Graham Markall).
* A fast cube root function is added (Michael Collison).
* Support for atomic ``xor``, increment, decrement, exchange, are added, and
  compare-and-swap is extended to support 64-bit integers (Michael Collison).
* Addition of ``cuda.is_supported_version()`` to check if the CUDA runtime
  version is supported (Graham Markall).
* The CUDA dispatcher now shares infrastructure with the CPU dispatcher,