@@ -12,14 +12,14 @@ jobs:
     name: macOS
     vmImage: macOS-10.14
     matrix:
-      py37_np116:
+      py37_np117:
         PYTHON: '3.7'
-        NUMPY: '1.16'
+        NUMPY: '1.17'
         CONDA_ENV: 'azure_ci'
         TEST_START_INDEX: 0
-      py38_np117:
-        PYTHON: '3.8'
-        NUMPY: '1.17'
+      py39_np120:
+        PYTHON: '3.9'
+        NUMPY: '1.20'
         CONDA_ENV: 'azure_ci'
         TEST_START_INDEX: 1
 
@@ -28,91 +28,92 @@ jobs:
     name: Linux
     vmImage: ubuntu-16.04
     matrix:
-      py37_np115_cov:
-        PYTHON: '3.7'
-        NUMPY: '1.15'
-        CONDA_ENV: azure_ci
-        RUN_COVERAGE: yes
-        RUN_FLAKE8: yes
-        RUN_MYPY: yes
-        TEST_START_INDEX: 2
       py37_np115_32bit:
+        # 32 bit linux only has np 1.15
         PYTHON: '3.7'
         NUMPY: '1.15'
         CONDA_ENV: azure_ci
         BITS32: yes
-        TEST_START_INDEX: 3
-      py37_np116_vanilla:
+        TEST_START_INDEX: 2
+      py37_np117_cov:
         PYTHON: '3.7'
-        NUMPY: '1.16'
+        NUMPY: '1.17'
+        CONDA_ENV: azure_ci
+        RUN_COVERAGE: yes
+        RUN_FLAKE8: yes
+        RUN_MYPY: yes
+        TEST_START_INDEX: 3
+      py37_np117_vanilla:
+        PYTHON: '3.7'
+        NUMPY: '1.17'
         CONDA_ENV: azure_ci
         VANILLA_INSTALL: yes
         TEST_START_INDEX: 4
-      py37_np116_tbb:
+      py37_np117_tbb:
         PYTHON: '3.7'
-        NUMPY: '1.16'
+        NUMPY: '1.17'
         CONDA_ENV: azure_ci
         TEST_THREADING: 'tbb'
         TEST_START_INDEX: 5
-      py37_np116_omp:
+      py37_np117_omp:
         PYTHON: '3.7'
-        NUMPY: '1.16'
+        NUMPY: '1.17'
         CONDA_ENV: azure_ci
         TEST_THREADING: omp
         TEST_START_INDEX: 6
-      py37_np116_workqueue:
+      py37_np117_workqueue:
         PYTHON: '3.7'
-        NUMPY: '1.16'
+        NUMPY: '1.17'
         CONDA_ENV: azure_ci
         TEST_THREADING: workqueue
         TEST_START_INDEX: 7
-      py37_np117_doc:
+      py37_np118_doc:
         PYTHON: '3.7'
-        NUMPY: '1.17'
+        NUMPY: '1.18'
         CONDA_ENV: azure_ci
         BUILD_DOC: yes
         TEST_START_INDEX: 8
-      py37_np117_pickle5:
+      py37_np118_pickle5:
         PYTHON: '3.7'
-        NUMPY: '1.17'
+        NUMPY: '1.18'
         CONDA_ENV: azure_ci
         TEST_PICKLE5: yes
         TEST_START_INDEX: 9
-      py37_np118_svml:
+      py37_np119_svml:
         PYTHON: '3.7'
-        NUMPY: '1.18'
+        NUMPY: '1.19'
         CONDA_ENV: azure_ci
         TEST_SVML: yes
         TEST_START_INDEX: 10
-      py37_np119:
+      py37_np120:
         PYTHON: '3.7'
-        NUMPY: '1.19'
+        NUMPY: '1.20'
         CONDA_ENV: azure_ci
         TEST_START_INDEX: 11
-      py38_np117:
-        PYTHON: '3.8'
-        NUMPY: '1.17'
-        CONDA_ENV: azure_ci
-        TEST_START_INDEX: 12
-      py38_np118_typeguard:
+      py38_np118:
         PYTHON: '3.8'
         NUMPY: '1.18'
         CONDA_ENV: azure_ci
-        RUN_TYPEGUARD: yes
-        TEST_START_INDEX: 13
-      py38_np119:
+        TEST_START_INDEX: 12
+      py38_np119_typeguard:
         PYTHON: '3.8'
         NUMPY: '1.19'
         CONDA_ENV: azure_ci
+        RUN_TYPEGUARD: yes
+        TEST_START_INDEX: 13
+      py38_np120:
+        PYTHON: '3.8'
+        NUMPY: '1.20'
+        CONDA_ENV: azure_ci
         TEST_START_INDEX: 14
-      py39_np115:
+      py39_np117:
         PYTHON: '3.9'
-        NUMPY: '1.16'
+        NUMPY: '1.17'
         CONDA_ENV: azure_ci
         TEST_START_INDEX: 15
-      py39_np119:
+      py39_np120:
         PYTHON: '3.9'
-        NUMPY: '1.19'
+        NUMPY: '1.20'
         CONDA_ENV: azure_ci
         TEST_START_INDEX: 16
 
