@@ -8,14 +8,14 @@ jobs:
     vmImage: ${{ parameters.vmImage }}
   strategy:
     matrix:
-      py39_np119:
+      py39_np120:
         PYTHON: '3.9'
-        NUMPY: '1.19'
+        NUMPY: '1.20'
         CONDA_ENV: 'testenv'
         TEST_START_INDEX: 17
-      py37_np115:
+      py37_np117:
         PYTHON: '3.7'
-        NUMPY: '1.15'
+        NUMPY: '1.17'
         CONDA_ENV: 'testenv'
         TEST_START_INDEX: 18
 
