@@ -43,7 +43,7 @@ requirements:
     - tbb-devel >=2021       # [not (armv6l or armv7l or aarch64 or linux32 or ppc64le)]
   run:
     - python >=3.6
-    - numpy >=1.15
+    - numpy >=1.17
     - setuptools
     # On channel https://anaconda.org/numba/
     - llvmlite >=0.37.0dev0,<0.37
