@@ -389,24 +389,24 @@ The following reduction functions are supported:
 
 * :func:`numpy.diff` (only the 2 first arguments)
 * :func:`numpy.median` (only the first argument)
-* :func:`numpy.nancumprod` (only the first argument, requires NumPy >= 1.12))
-* :func:`numpy.nancumsum` (only the first argument, requires NumPy >= 1.12))
+* :func:`numpy.nancumprod` (only the first argument)
+* :func:`numpy.nancumsum` (only the first argument)
 * :func:`numpy.nanmax` (only the first argument)
 * :func:`numpy.nanmean` (only the first argument)
 * :func:`numpy.nanmedian` (only the first argument)
 * :func:`numpy.nanmin` (only the first argument)
-* :func:`numpy.nanpercentile` (only the 2 first arguments,
-  requires NumPy >= 1.11, complex dtypes unsupported)
-* :func:`numpy.nanquantile` (only the 2 first arguments, requires NumPy >= 1.15,
-  complex dtypes unsupported)
+* :func:`numpy.nanpercentile` (only the 2 first arguments, complex dtypes
+  unsupported)
+* :func:`numpy.nanquantile` (only the 2 first arguments, complex dtypes
+  unsupported)
 * :func:`numpy.nanprod` (only the first argument)
 * :func:`numpy.nanstd` (only the first argument)
 * :func:`numpy.nansum` (only the first argument)
 * :func:`numpy.nanvar` (only the first argument)
-* :func:`numpy.percentile` (only the 2 first arguments, requires NumPy >= 1.10,
-  complex dtypes unsupported)
-* :func:`numpy.quantile` (only the 2 first arguments, requires NumPy >= 1.15,
-  complex dtypes unsupported)
+* :func:`numpy.percentile` (only the 2 first arguments, complex dtypes
+  unsupported)
+* :func:`numpy.quantile` (only the 2 first arguments, complex dtypes
+  unsupported)
 
 Other functions
 ---------------
@@ -471,7 +471,7 @@ The following top-level functions are supported:
 * :func:`numpy.hstack`
 * :func:`numpy.identity`
 * :func:`numpy.kaiser`
-* :func:`numpy.interp` (only the 3 first arguments; requires NumPy >= 1.10)
+* :func:`numpy.interp` (only the 3 first arguments)
 * :func:`numpy.intersect1d` (only first 2 arguments, ar1 and ar2)
 * :func:`numpy.linspace` (only the 3-argument form)
 * :class:`numpy.ndenumerate`
