@@ -5,7 +5,7 @@ Installation
 Compatibility
 -------------
 
-Numba is compatible with Python 3.7 or later, and Numpy versions 1.15 or later.
+Numba is compatible with Python 3.7 or later, and Numpy versions 1.17 or later.
 
 Our supported platforms are:
 
